--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.5",
+    "@mui/material": "^6.4.5",
+    "@mui/system": "^6.4.3",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^5.21.0",
+    "antd": "^5.24.1",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.5.4",
@@ -29,6 +32,7 @@
     "react-paginate": "^8.2.0",
     "react-print": "^1.3.1",
     "react-redux": "^9.1.1",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.15.1",
