--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.4.0",
