--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jsbarcode": "^3.11.6",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.47",
     "notistack": "^3.0.1",
